Fix bugs.
